Factor out GROFF commands to a variable

--- a/manpages/Makefile.in
+++ b/manpages/Makefile.in
@@ -19,7 +19,6 @@ directories = $(top_srcdir)/man/man1 \
 
 all : $(directories) $(manpages)
 
-
 depend:
 	@ :
 
@@ -38,21 +37,21 @@ install:
 	$(INSTALL) -m 755  $(top_srcdir)/man/man5/.mdsplus.5.gz $(exec_prefix)/man/man5
 	$(INSTALL) -m 755  $(top_srcdir)/man/man5/mdsip.hosts.5.gz $(exec_prefix)/man/man5
 
-
 $(directories):
 	$(INSTALL) -d $@
 
+BUILDMAN = $(GROFF) $(GROFF_FLAGS) $< | gzip - -c > $@
 $(top_srcdir)/man/man1/traverser.1.gz : traverser.groff
-	$(GROFF) $(GROFF_FLAGS) traverser.groff | gzip - -c > $@
+	$(BUILDMAN)
 
 $(top_srcdir)/man/man1/mdsplus.1.gz : mdsplus.groff
-	$(GROFF) $(GROFF_FLAGS) mdsplus.groff | gzip - -c > $@
+	$(BUILDMAN)
 
 $(top_srcdir)/man/man5/mdsplus.conf.5.gz : mdsplus.conf.groff
-	$(GROFF) $(GROFF_FLAGS) mdsplus.conf.groff | gzip - -c > $@
+	$(BUILDMAN)
 
 $(top_srcdir)/man/man5/.mdsplus.5.gz : .mdsplus.groff
-	$(GROFF) $(GROFF_FLAGS) .mdsplus.groff | gzip - -c > $@
+	$(BUILDMAN)
 
 $(top_srcdir)/man/man5/mdsip.hosts.5.gz : mdsip.hosts.groff
-	$(GROFF) $(GROFF_FLAGS) mdsip.hosts.groff | gzip - -c > $@
+	$(BUILDMAN)
