--- a/math/Makefile.in
+++ b/math/Makefile.in
@@ -57,11 +57,6 @@ all: @MAKESHLIBDIR@ @MAKESHLIBDIR@libMdsMath@SHARETYPE@
 depend:
 	@makedepend -- $(CFLAGS) -- $(SOURCES)
 
-clean:
-	@ $(RM) $(OBJECTS)
-	@ $(RM) so_locations
-	@ $(RM) @MAKESHLIBDIR@libMdsMath@SHARETYPE@
-
 install:
 	if [ ! -d @libdir@ ] ; then \
                 mkdir @libdir@; \
@@ -69,8 +64,42 @@ install:
         fi;
 	$(INSTALL) -m 755  @MAKESHLIBDIR@libMdsMath@SHARETYPE@ @libdir@
 
+@MAKESHLIBDIR@ :
+	mkdir @MAKESHLIBDIR@
+
+ifeq "@MACOSX@" ""
+
+clean:
+	@ $(RM) $(OBJECTS)
+	@ $(RM) so_locations
+	@ $(RM) @MAKESHLIBDIR@libMdsMath@SHARETYPE@
+
+
 @MAKESHLIBDIR@libMdsMath@SHARETYPE@ : $(OBJECTS) 
 	$(LD) -o $@ @FOR_LINKSHARED@ $(OBJECTS) -L@MAKESHLIBDIR@ -lMdsShr @FOR_LDFLAGS@ $(LIBS) $(LDFLAGS)
 
 @MAKESHLIBDIR@ :
 	mkdir @MAKESHLIBDIR@
+
+else
+
+OBJ_i386 = $(SOURCES:.f=.o_i386) boxsmooth.o iw9get.o
+
+%.o_i386 : %.f
+	$(FC) -c $(FFLAGS) -m32 $< -o $@
+
+clean:
+	@ $(RM) $(OBJECTS)
+	@ $(RM) so_locations
+	@ $(RM) libMdsMath@SHARETYPE@* @MAKESHLIBDIR@libMdsMath@SHARETYPE@
+
+@MAKESHLIBDIR@libMdsMath@SHARETYPE@ : libMdsMath@SHARETYPE@ libMdsMath@SHARETYPE@_i386
+	lipo -create -o $@ $^
+
+libMdsMath@SHARETYPE@ : $(OBJECTS)
+	$(LD) -o $@ @FOR_LINKSHARED@ $(OBJECTS) -L@MAKESHLIBDIR@ -lMdsShr @FOR_LDFLAGS@ $(LIBS) $(LDFLAGS)
+
+libMdsMath@SHARETYPE@_i386 : $(OBJECTS_i386)
+	$(LD) -o $@ @FOR_LINKSHARED@ $(OBJECTS_i386) -L@MAKESHLIBDIR@ -lMdsShr @FOR_LDFLAGS@ $(LIBS) $(LDFLAGS) -m32
+endif
+
