Make the custom compile line for TdiSql.c follow the compilation semantics of all of the implicitly compiled files as well, but using the same built in rule with SYBASE_INC appended to the end.

--- a/tdishr/Makefile.in
+++ b/tdishr/Makefile.in
@@ -133,4 +133,4 @@ TdiShr.exports: TdiShr.def
 	sed -e /LIBRARY/\;/\;/d TdiShr.def > $@
 
 TdiSql.o : TdiSql.c
-	$(CC) -o $@ TdiSql.c $(CFLAGS) -c $(SYBASE_INC)
+	$(COMPILE.cc) $(OUTPUT_OPTION) $< $(SYBASE_INC)
