--- a/tdishr/Makefile.in
+++ b/tdishr/Makefile.in
@@ -133,4 +133,4 @@ TdiShr.exports: TdiShr.def
 	sed -e /LIBRARY/\;/\;/d TdiShr.def > $@
 
 TdiSql.o : TdiSql.c
-	$(COMPILE.cc) $(OUTPUT_OPTION) $< $(SYBASE_INC)
+	$(COMPILE.c) $(OUTPUT_OPTION) $< $(SYBASE_INC)
