Add include directory for udt4

--- a/mdstcpip/Makefile.in
+++ b/mdstcpip/Makefile.in
@@ -14,7 +14,7 @@ RM=$(top_srcdir)/devscripts/rm_if
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 CFLAGS=@CFLAGS@ $(COMPRESSION_SWITCH)
-CXXFLAGS=-g -O3 -Wno-deprecated -fPIC -finline-functions -fno-strict-aliasing @CFLAGS@ 
+CXXFLAGS=-g -O3 -Wno-deprecated -fPIC -finline-functions -fno-strict-aliasing -Iudt4/src @CFLAGS@ 
 LDFLAGS=@LDFLAGS@
 LIBS=@LIBS@ @LIBSOCKET@ @LIBNSL@ @LIBRESOLV@ @MEMCHKLIB@
 INSTALL=@top_srcdir@/conf/install-sh -c
