--- a/mdslib/Makefile.in
+++ b/mdslib/Makefile.in
@@ -67,35 +67,35 @@ install:
 	mkdir @MAKEBINDIR@
 
 @MAKESHLIBDIR@libMdsLib@SHARETYPE@ : $(OBJECTS)
-	$(LD) -o $@ @LINKSHARED@ $(LDFLAGS) $(OBJECTS) -L@MAKELIBDIR@ -l$(MdsIpUtil) -L@MAKESHLIBDIR@ $(MDSLIB_LIBS) $(LIBS) @MEMCHKLIB@ $(GLOBUS_LDFLAGS) $(GLOBUS_LIBS) $(GLOBUS_PKG_LIBS) @GCCLIB@
+	$(LD) -o $@ @LINKSHARED@ $(LDFLAGS) $^ -L@MAKELIBDIR@ -l$(MdsIpUtil) -L@MAKESHLIBDIR@ $(MDSLIB_LIBS) $(LIBS) @MEMCHKLIB@ $(GLOBUS_LDFLAGS) $(GLOBUS_LIBS) $(GLOBUS_PKG_LIBS) @GCCLIB@
 
 @MAKELIBDIR@libMdsLib.a : $(OBJECTS)
-	$(AR) -cr $@ $(OBJECTS)
+	$(AR) -cr $@ $^
 	@RANLIB@ $@
 
 @MAKESHLIBDIR@libMdsLib_client@SHARETYPE@ : $(OBJECTS_CLIENT)
-	$(LD) -o $@ @LINKSHARED@ $(LDFLAGS) $(OBJECTS_CLIENT) -L@MAKELIBDIR@ -l$(MdsIpUtil) $(LIBS) @MEMCHKLIB@  $(GLOBUS_LDFLAGS) $(GLOBUS_LIBS) $(GLOBUS_PKG_LIBS)
+	$(LD) -o $@ @LINKSHARED@ $(LDFLAGS) $^ -L@MAKELIBDIR@ -l$(MdsIpUtil) $(LIBS) @MEMCHKLIB@  $(GLOBUS_LDFLAGS) $(GLOBUS_LIBS) $(GLOBUS_PKG_LIBS)
 
 @MAKELIBDIR@libMdsLib_client.a : $(OBJECTS_CLIENT) $(OBJECTS_CLIENT_ARCHIVE)
-	$(AR) -cr $@ $(OBJECTS_CLIENT) $(OBJECTS_CLIENT_ARCHIVE)
+	$(AR) -cr $@ $^
 
 MdsLib_client.o : MdsLib.c
-	$(CC) -o $@ -c $(CFLAGS) MdsLib.c -D_CLIENT_ONLY
+	$(CC) -o $@ -c $(CFLAGS) $^ -D_CLIENT_ONLY
 
 @MAKELIBDIR@ :
 	mkdir @MAKELIBDIR@
 
 @MAKEBINDIR@mdslib_ctest : mdslib_ctest.c
-	$(CC) -o $@ $(CFLAGS) @CC_LDFLAGS@ mdslib_ctest.c -L@MAKESHLIBDIR@ -lMdsLib -lMdsIpShr $(MDSLIB_LIBS) $(LIBS) @LIBM@ $(GLOBUS_LDFLAGS) $(GLOBUS_LIBS) $(GLOBUS_PKG_LIBS)
+	$(CC) -o $@ $(CFLAGS) @CC_LDFLAGS@ $^ -L@MAKESHLIBDIR@ -lMdsLib -lMdsIpShr $(MDSLIB_LIBS) $(LIBS) @LIBM@ $(GLOBUS_LDFLAGS) $(GLOBUS_LIBS) $(GLOBUS_PKG_LIBS)
 
 @MAKEBINDIR@mdslib_ftest : mdslib_ftest.f
-	$(FC) -o $@ $(FFLAGS) mdslib_ftest.f @FEXECLIBDIR@@MAKESHLIBDIR@ -lMdsLib -lMdsIpShr $(MDSLIB_LIBS) $(LIBS) $(GLOBUS_LDFLAGS) $(GLOBUS_LIBS) $(GLOBUS_PKG_LIBS)
+	$(FC) -o $@ $(FFLAGS) $^ @FEXECLIBDIR@@MAKESHLIBDIR@ -lMdsLib -lMdsIpShr $(MDSLIB_LIBS) $(LIBS) $(GLOBUS_LDFLAGS) $(GLOBUS_LIBS) $(GLOBUS_PKG_LIBS)
 
 @MAKEBINDIR@mdslib_fremotetest : mdslib_fremotetest.f
-	$(FC) -o $@ $(FFLAGS) mdslib_fremotetest.f @FEXECLIBDIR@@MAKESHLIBDIR@ -lMdsLib -lMdsIpShr $(MDSLIB_LIBS) $(LIBS) $(GLOBUS_LDFLAGS) $(GLOBUS_LIBS) $(GLOBUS_PKG_LIBS)
+	$(FC) -o $@ $(FFLAGS) $^ @FEXECLIBDIR@@MAKESHLIBDIR@ -lMdsLib -lMdsIpShr $(MDSLIB_LIBS) $(LIBS) $(GLOBUS_LDFLAGS) $(GLOBUS_LIBS) $(GLOBUS_PKG_LIBS)
 
 @MAKEBINDIR@dtype_test : dtype_test.c
-	$(CC) -o $@ $(CFLAGS) @CC_LDFLAGS@ dtype_test.c -L@MAKESHLIBDIR@ -lMdsLib -lMdsIpShr $(MDSLIB_LIBS) $(LIBS) $(GLOBUS_LDFLAGS) $(GLOBUS_LIBS) $(GLOBUS_PKG_LIBS)
+	$(CC) -o $@ $(CFLAGS) @CC_LDFLAGS@ $^ -L@MAKESHLIBDIR@ -lMdsLib -lMdsIpShr $(MDSLIB_LIBS) $(LIBS) $(GLOBUS_LDFLAGS) $(GLOBUS_LIBS) $(GLOBUS_PKG_LIBS)
 
 makefile-header:  
 	@GLOBUS_LOCATION@/bin/globus-makefile-header --flavor=@GLOBUS_FLAVOR@pthr globus_xio > makefile-header
