--- a/scripts/Makefile.in
+++ b/scripts/Makefile.in
@@ -30,38 +30,39 @@ install:
 	  $(INSTALL) -m 755 $${script} @bindir@;\
 	done
 
-@MAKEBINDIR@remote_submit : remote_submit
-	cp remote_submit @MAKEBINDIR@remote_submit
-
-@MAKEBINDIR@unix_submit : unix_submit
-	cp unix_submit @MAKEBINDIR@unix_submit
-
-@MAKEBINDIR@synchronize_unix : synchronize_unix
-	cp synchronize_unix @MAKEBINDIR@synchronize_unix
-
-@MAKEBINDIR@SetMdsplusFileProtection : SetMdsplusFileProtection
-	cp SetMdsplusFileProtection @MAKEBINDIR@SetMdsplusFileProtection
-
 @MAKEBINDIR@ :
 	mkdir @MAKEBINDIR@
 
+COPY_SCRIPT = cp $< $@
+@MAKEBINDIR@remote_submit : remote_submit
+	$(COPY_SCRIPT)
+
+@MAKEBINDIR@unix_submit : unix_submit
+	$(COPY_SCRIPT)
+
+@MAKEBINDIR@synchronize_unix : synchronize_unix
+	$(COPY_SCRIPT)
+
+@MAKEBINDIR@SetMdsplusFileProtection : SetMdsplusFileProtection
+	$(COPY_SCRIPT)
+
 @MAKEBINDIR@job_finish : job_finish
-	cp  job_finish @MAKEBINDIR@job_finish
+	$(COPY_SCRIPT)
 
 @MAKEBINDIR@job_functions : job_functions
-	cp  job_functions @MAKEBINDIR@job_functions
+	$(COPY_SCRIPT)
 
 @MAKEBINDIR@job_output : job_output
-	cp  job_output @MAKEBINDIR@job_output
+	$(COPY_SCRIPT)
 
 @MAKEBINDIR@job_que : job_que
-	cp  job_que @MAKEBINDIR@job_que
+	$(COPY_SCRIPT)
 
 @MAKEBINDIR@job_start : job_start
-	cp  job_start @MAKEBINDIR@job_start
+	$(COPY_SCRIPT)
 
 @MAKEBINDIR@job_wait : job_wait
-	cp  job_wait @MAKEBINDIR@job_wait
+	$(COPY_SCRIPT)
 
 @MAKEBINDIR@MonitorCpciData.py : MonitorCpciData.py 
-	cp  MonitorCpciData.py @MAKEBINDIR@MonitorCpciData.py
+	$(COPY_SCRIPT)
