Parallel make is here for MDS!  I ran this with infinite recursion on a 32 core system, and it all works great.  Note that I have java disabled, and probably several other components (labview, motif, etc.)  But for that, you can always go back to serial make.

--- a/Makefile.in
+++ b/Makefile.in
@@ -132,3 +132,11 @@ binaries :
 	tar cvf - $(CLIENT_BINARIES) | compress -c - > ../binaries/MDSplus.`uname`.client.tar.Z
 
 
+# Interdependent directories:
+ccl: cdu mdsshr mdsdcl
+tcl: cdu mdsshr treeshr tdishr mdstcpip servershr mdsdcl
+camshr: cdu mdsdcl
+mdsdcl: cdu mdsshr
+mdslib: mdstcpip
+servershr: mdsdcl tdishr treeshr mdsshr mdstcpip
+
