Fix an obvious type in the mkdir command, and prefer -p in the case where the directories already exist

--- a/tdic/Makefile.in
+++ b/tdic/Makefile.in
@@ -51,10 +51,10 @@ install:
 	$(CC) -o $@ @CC_LDFLAGS@ tdic.c $(CFLAGS) $(TDIC_LIBS)
 
 @MAKELIBDIR@ :
-	mkdir @MAKELIBDIR@
+	mkdir -p @MAKELIBDIR@
 
 @MAKEBINDIR@ :
-	MKDIR @MAKEBINDIR@
+	mkdir -p @MAKEBINDIR@
 
 @MAKESHLIBDIR_RULE@
 
