Fix link cxx options

--- a/mdstcpip/Makefile.in
+++ b/mdstcpip/Makefile.in
@@ -267,10 +267,10 @@ $(MdsIpTCPV6): $(TCPV6_OBJECTS)
 	$(LD) -o $@ @LINKSHARED@ $^ -L@MAKESHLIBDIR@ -lMdsIpShr $(LIBS) $(LDFLAGS)
 
 $(MdsIpUDT): $(UDT_OBJECTS)
-	$(CXX) -o $@ @LINKSHARED@ $^ -L@MAKESHLIBDIR@ -lMdsIpShr $(LIBS) $(LDFLAGS)
+	$(CXX) -o $@ @LINKSHARED@ $^ $(CXXFLAGS) -L@MAKESHLIBDIR@ -lMdsIpShr $(LIBS) $(LDFLAGS)
 
 $(MdsIpUDTV6): $(UDTV6_OBJECTS)
-	$(CXX) -o $@ @LINKSHARED@ $^ -L@MAKESHLIBDIR@ -lMdsIpShr $(LIBS) $(LDFLAGS)
+	$(CXX) -o $@ @LINKSHARED@ $^ $(CXXFLAGS) -L@MAKESHLIBDIR@ -lMdsIpShr $(LIBS) $(LDFLAGS)
 
 $(MdsIpSSH):
 	ln -sf libMdsIpTunnel@SHARETYPE@ $@
