--- a/javadevices/Makefile.in
+++ b/javadevices/Makefile.in
@@ -149,7 +149,8 @@ RFXWAVESETUPSetup.java\
 RFX_PROTECTIONSSetup.java\
 FLIRSC65XSetup.java\
 NI6368AISetup.java\
-ACQIPPSETUPSetup.java
+ACQIPPSETUPSetup.java\
+DIO2_ENCDECSetup.java
 
 all: @MAKEJAVADIR@ @MAKEJAVADIR@classes \
      @MAKEJAVADIR@classes/jDevices.jar
